--- a/report/Introduction/introduction.tex
+++ b/report/Introduction/introduction.tex
@@ -12,6 +12,13 @@
 
 %http://www.thepaintingfool.com/papers/colton_dagstuhl09.pdf
 
+Contribution:
+recent areas of concern in this area as a whole is the evaluation process. Turing-style tests were used for a long time but more quantitative measures were needed to assess the level of \textit{responsibility} of the system while reducing the reliance on \textit{unbiased observers}. Recent proposals include the FACE and IDEA descriptive models. This project will be evaluated against these measures in order to get more feedback on the effectiveness of these models. More details on the evaluation methodologies used for this project can be found in Chapter 4.
+
+Major new directions that Computational Creativity research is taking as described by Colton and Wiggins is the
+\textit{usage of web resources as a source of material and conceptual inspiration for creative acts by computer}. This project takes a step in this direction.
+End Contribution bit.
+
 Poetry is a linguistic art form designed to help convey a particular, well-defined message in a memorable and powerful way. Poets write poems that are succinct in length but dense in meaning by employing a number of techniques, such as rhyme and rhythm (Chapter num). However, they must take the occasional liberty with grammar rules in order to meet the constraints imposed by these techniques as they are more important in ultimately conveying the message. Therefore, poems can be understood as natural language messages with added prioritised constraints and features. Different types of poetry each have their own sets of constraints, features and priorities that define their best usage (Chapter num). For example, limericks are best suited to humour while elegies are best suited to remembrance. 
 \\\\
 The origins of these constraints is not sufficiently documented given that poetry predates literacy. This means that our understanding of the techniques used in poetry comes from human analysis. There are few better tools for pattern and feature detection than computers, so the aim of this paper is to investigate the effectiveness of computer systems to learn constraints and features in natural language. Analysing poetry is particularly effective because of the wider array of constraints and patterns to be found, allowing us to test the hypothesis that computers are adept to pattern and feature recognition in natural language.
