--- a/report/report.tex
+++ b/report/report.tex
@@ -4,16 +4,16 @@
 \documentclass[oneside,12pt]{Classes/CUEDthesisPSnPDF}
 
 \ifpdf
-    \pdfinfo { /Title  (The Poetry Pioneer)
+    \pdfinfo { /Title  (The Pragmatic Poet)
                /Creator (TeX)
                /Producer (pdfTeX)
-               /Subject (The Poetry Pioneer)
+               /Subject (The Pragmatic Poet)
                /Keywords (PhD, Thesis)}
     \pdfcatalog { /PageMode (/UseOutlines)
                   /OpenAction (fitbh)  }
 \fi
 
-\title{The Poetry Pioneer}
+\title{The Pragmatic Poet}
 
 \ifpdf
   \author{\href{mailto:nbn10@doc.ic.ac.uk}{Nitin Nihalani}}
